--- a/less/_variables.less
+++ b/less/_variables.less
@@ -28,10 +28,10 @@
 
 // set your brand colour
 
-@primary:			#679;
+@primary:			var(--primary-colour);
 @primary--:			#fff; // contrasting colour to the primary colour
 
-@secondary:			#fd0;
+@secondary:			#657267;
 
 // set overall temperature with hue and intensity with saturation
 
