--- a/less/_form.less
+++ b/less/_form.less
@@ -37,12 +37,12 @@ button {
 	// primary button styling
 	
 	&.primary {
-		border-color: darken(@primary, 6%);
+		border-color: @primary, 6%;
 		background: @primary;
 		color: @primary--;
 		font-weight: 700;
 		
-		&:not(:disabled):hover, &:not(:disabled):focus { background: darken(@primary, 6%)	}
+		&:not(:disabled):hover, &:not(:disabled):focus { background: @primary	}
 	}
 	
 	&.m-full {
