--- a/less/_grid.less
+++ b/less/_grid.less
@@ -21,7 +21,7 @@ grid {
 @columns: 12;
 	
 .width(@x) {
-	width: 100% / @columns * @x;
+	width: (100% / @columns * @x);
 }
 
 // eg: <div col="6"></div>
