Adjust content width

--- a/less/_variables.less
+++ b/less/_variables.less
@@ -7,6 +7,7 @@
 
 @n: ~":not([class])";
 @x: ~"[xx]";
+@cx: ~".xx";
 
 
 // font families
@@ -65,5 +66,5 @@
 
 // widths
 
-@width: 90rem;
+@width: 120rem;
 @mobile: 50rem;
