Allow figures to be used in cards

--- a/less/_card.less
+++ b/less/_card.less
@@ -21,7 +21,7 @@ card {
 	&:last-child { margin-bottom: 0 }
 	
 	// sets the image to full width
-	> img@{n}, > img@{x} {
+	> img@{n}, > img@{x}, > figure@{n},  > figure@{x}, > figure@{cx} {
 		width: ~"calc(100% + 4rem)";
 		max-width: none;
 		margin: 0 0 2rem -2rem;
